--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
                <div class="logoDiv">
                     <a class="external logo" href="http://www.facebook.com/133758093341380/" title="Visit us on Facebook" target="_blank"><img src="/images/facebookGraphic.jpg" alt="Visit us on Facebook" /></a>
                     <a class="external logo" href="http://twitter.com/DCBearsFans" title="Follow us on Twitter" target="_blank"><img src="/images/twitterGraphic.jpg" alt="Follow us on Twitter" /></a>
-                </div>&copy; DCBearsFans.com <span id="copyrightYear" />
+                </div><span>&copy; DCBearsFans.com </span><span id="copyrightYear" />
     <script> 
     $(function(){
       $("#copyrightYear").text(new Date().getFullYear()); 
