--- a/includes/header.html
+++ b/includes/header.html
@@ -1,21 +1,9 @@
 		<div id="header" class="clearAfter">
 			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="/images/clubName1.gif" border="0" /></a>
             <ul id="topNav">
-			<script
-                var pageNames = ["Home", "About", "Club News & Events", "Bear Links"];
-                var pageLinks = ["/", "/about/", "/news/", "/links/"];
-                var currentSection = window.location.pathname;
-				var headerStr = "";
-                for (var i=0; i< pageNames.lenth; i++)
-                {
-                    var className = "";
-                    if (pageLinks[i] == "/" && (currentSection == "" || currentSection == "/" || currentSection == "/index.html"))
-                        className = "current";
-                    else if(pageLinks[i] != "/")
-                        className = currentSection.indexOf(pageLinks[i]) != -1 ? "current" : "";
-                    className += i == (pageNames.lenth-1) ? " last" : "";
-                    headerStr += "\t<li class='" + className + "'><a title='" + pageNames[i] + "' href='" + pageLinks[i] + "'>" + pageNames[i] + "</a></li>\n\t";
-                }
-			</script>
+                <li><a title='Home' href='/'>Home</a></li>	
+                <li><a title='About' href='/about/'>About</a></li>	
+                <li><a title='Club News & Events' href='/news/'>Club News &amp; Events</a></li>	
+                <li class="last"><a title='Bear Links' href='/links/'>Bear Links</a></li>	
 			</ul>
 		</div>
