--- a/includes/schedule.html
+++ b/includes/schedule.html
@@ -16,7 +16,7 @@
 		<ul class="stripe0 clearAfter">
 			<li class="date">Sun Sep 15</li>
 			<li class="team">@ Broncos</li>
-			<li class="time">4:25pm</li>
+			<li class="time">W 16-14</li>
 		</ul>
 	</li>
 	<li>
