--- a/includes/schedule.html
+++ b/includes/schedule.html
@@ -23,7 +23,7 @@
 		<ul class="stripe1 clearAfter">
 			<li class="date">Mon Sep 23</li>
 			<li class="team">@ Redskins</li>
-			<li class="time">8:15pm</li>
+			<li class="time">W 31-15</li>
 		</ul>
 	</li>
 	<li>
