--- a/includes/schedule.html
+++ b/includes/schedule.html
@@ -30,7 +30,7 @@
 		<ul class="stripe0 clearAfter">
 			<li class="date">Sun Sep 29</li>
 			<li class="team">Vikings</li>
-			<li class="time">4:25pm</li>
+			<li class="time">W 16-6</li>
 		</ul>
 	</li>
 	<li>
@@ -119,6 +119,6 @@
 	</li>
 	<li>
 		<ul class="stripe1 record clearAfter">
-			<li>Record: 1-1</li>
+			<li>Record: 3-1</li>
 		</ul>
 	</li>
